--- a/about/index.html
+++ b/about/index.html
@@ -6,39 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABOUT PAGE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="/asset/Jo.png"/>
+    <link rel="shortcut icon" href="../asset/Jo.png"/>
   </head>
 
   <body>
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-lg navbar-dark text-light sticky-top" style="background-color: #1A120B;">
       <div class="container-fluid">
-        <img src="/asset/Jo.png" width="60px" />
-        <a class="navbar-brand" href="/">ABOUT ME</a>
+        <img src="../asset/Jo.png" width="60px" />
+        <a class="navbar-brand" href="#">ABOUT ME</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">HOME</a>
+              <a class="nav-link" aria-current="page" href="../index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about">ABOUT</a>
+              <a class="nav-link active" href="#">ABOUT</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> EXPERIENCE </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/experience/pendidikan">RIWAYAT PENDIDIKAN</a></li>
-                <li><a class="dropdown-item" href="/experience/pekerjaan">RIWAYAT PEKERJAAN</a></li>
-                <li><a class="dropdown-item" href="/experience/organisasi">RIWAYAT ORGANISASI</a></li>
+                <li><a class="dropdown-item" href="../experience/pendidikan/index.html">RIWAYAT PENDIDIKAN</a></li>
+                <li><a class="dropdown-item" href="../experience/pekerjaan/index.html">RIWAYAT PEKERJAAN</a></li>
+                <li><a class="dropdown-item" href="../experience/organisasi/index.html">RIWAYAT ORGANISASI</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">PROJECT</a>
+              <a class="nav-link" href="../project/index.html">PROJECT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+              <a class="nav-link" href="../contact/index.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
       <div class="row align-items-center">
         <div class="col-sm-4 mt-4">
           <center>
-            <img src="/asset/foto portofolio.jpg" alt="My Image" style="width: 80%"/>
+            <img src="../asset/foto portofolio.jpg" alt="My Image" style="width: 80%"/>
           </center>
         </div>
         <div class="col-sm-8">
@@ -75,7 +75,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/office.png" class="card-img-top" alt="Ms office" style="max-width: 80px" />
+                <img src="../asset/office.png" class="card-img-top" alt="Ms office" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Microsoft Office</h5>
@@ -89,7 +89,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo visio.png" class="card-img-top" alt="visio" style="max-width: 80px" />
+                <img src="../asset/logo visio.png" class="card-img-top" alt="visio" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Microsoft Visio</h5>
@@ -103,7 +103,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/Edraw.jpg" class="card-img-top" alt="edraw" style="max-width: 80px" />
+                <img src="../asset/Edraw.jpg" class="card-img-top" alt="edraw" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Edraw</h5>
@@ -117,7 +117,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/google-sheets.png" class="card-img-top" alt="google sheets" style="max-width: 80px" />
+                <img src="../asset/google-sheets.png" class="card-img-top" alt="google sheets" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Google Sheets</h5>
@@ -131,7 +131,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo hysis.png" class="card-img-top" alt="hysis" style="max-width: 80px" />
+                <img src="../asset/logo hysis.png" class="card-img-top" alt="hysis" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Hysis</h5>
@@ -145,7 +145,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo canva.png" class="card-img-top" alt="canva" style="max-width: 80px" />
+                <img src="../asset/logo canva.png" class="card-img-top" alt="canva" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Canva</h5>
@@ -159,7 +159,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo coreldraw.png" class="card-img-top" alt="coreldraw" style="max-width: 80px" />
+                <img src="../asset/logo coreldraw.png" class="card-img-top" alt="coreldraw" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">CorelDRAW</h5>
@@ -173,7 +173,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo photoshop.png" class="card-img-top" alt="photoshop" style="max-width: 80px" />
+                <img src="../asset/logo photoshop.png" class="card-img-top" alt="photoshop" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">Photoshop</h5>
@@ -187,7 +187,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/logo html.png" class="card-img-top" alt="html" style="max-width: 80px" />
+                <img src="../asset/logo html.png" class="card-img-top" alt="html" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">HTML</h5>
@@ -201,7 +201,7 @@
           <div class="col">
             <div class="card">
               <center>
-                <img src="/asset/css-3.png" class="card-img-top" alt="CSS" style="max-width: 80px" />
+                <img src="../asset/css-3.png" class="card-img-top" alt="CSS" style="max-width: 80px" />
               </center>
               <div class="card-body">
                 <h5 class="btn btn-dark d-block align-items-center text-center">CSS</h5>
@@ -231,13 +231,13 @@
       <a> Terms of Service </a>
       <a> Privacy of Policy </a>
       <a href="https://www.instagram.com/marchseliusjonathan.jpg/">
-        <img src="/asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
+        <img src="../asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.linkedin.com/in/marchseliusjonathan26/">
-        <img src="/asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
+        <img src="../asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.youtube.com/channel/UCAS7iZYXD2rcISozKknrchQ">
-        <img src="/asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
+        <img src="../asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
       </a>
     </div>
   </footer>
