--- a/experience/pekerjaan/index.html
+++ b/experience/pekerjaan/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EXPERIENCE PAGE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="Asset/Jo.png"/>
+    <link rel="shortcut icon" href="../../asset/Jo.png"/>
     <link rel="stylesheet" href="../style.css"/>
   </head>
 
@@ -14,32 +14,32 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-lg navbar-dark text-light sticky-top" style="background-color: #1A120B;">
       <div class="container-fluid">
-        <img src="/asset/Jo.png" width="60px" />
-        <a class="navbar-brand" href="/">RIWAYAT PEKERJAAN</a>
+        <img src="../../asset/Jo.png" width="60px" />
+        <a class="navbar-brand" href="#">RIWAYAT PEKERJAAN</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">HOME</a>
+              <a class="nav-link" aria-current="page" href="../../index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">ABOUT</a>
+              <a class="nav-link" href="../../about/index.html">ABOUT</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle nav-link active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> EXPERIENCE </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/experience/pendidikan">RIWAYAT PENDIDIKAN</a></li>
-                <li><a class="dropdown-item" href="/experience/pekerjaan">RIWAYAT PEKERJAAN</a></li>
-                <li><a class="dropdown-item" href="/experience/organisasi">RIWAYAT ORGANISASI</a></li>
+                <li><a class="dropdown-item" href="../pendidikan/index.html">RIWAYAT PENDIDIKAN</a></li>
+                <li><a class="dropdown-item" href="#">RIWAYAT PEKERJAAN</a></li>
+                <li><a class="dropdown-item" href="../organisasi/index.html">RIWAYAT ORGANISASI</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">PROJECT</a>
+              <a class="nav-link" href="../../project/index.html">PROJECT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+              <a class="nav-link" href="../../contact/index.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
       <div class="row align-items-center">
         <div class="col-sm-3 mt-4">
           <center>
-            <img src="/asset/asisten lab.jpeg" alt="My Image" style="width: 200px; height: 200px" />
+            <img src="../../asset/asisten lab.jpeg" alt="My Image" style="width: 200px; height: 200px" />
           </center>
         </div>
         <div class="col-sm-9">
@@ -66,7 +66,7 @@
         </div>
         <div class="col-sm-3 mt-4">
           <center>
-            <img src="/asset/foto portofolio.jpg" alt="My Image" style="width: 200px; height: 200px" />
+            <img src="../../asset/foto portofolio.jpg" alt="My Image" style="width: 200px; height: 200px" />
           </center>
         </div>
         <div class="col-sm-9">
@@ -81,7 +81,7 @@
         </div>
         <div class="col-sm-3 mt-4">
           <center>
-            <img src="/asset/youtube profil.jpeg" alt="My Image" style="width: 200px; height: 200px" />
+            <img src="../../asset/youtube profil.jpeg" alt="My Image" style="width: 200px; height: 200px" />
           </center>
         </div>
         <div class="col-sm-9">
@@ -110,13 +110,13 @@
       <a> Terms of Service </a>
       <a> Privacy of Policy </a>
       <a href="https://www.instagram.com/marchseliusjonathan.jpg/">
-        <img src="/asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
+        <img src="../../asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.linkedin.com/in/marchseliusjonathan26/">
-        <img src="/asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
+        <img src="../../asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.youtube.com/channel/UCAS7iZYXD2rcISozKknrchQ">
-        <img src="/asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
+        <img src="../../asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
       </a>
     </div>
   </footer>
