--- a/index.html
+++ b/index.html
@@ -6,39 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <title>PORTOFOLIO MARCHSELIUS JONATHAN</title>
-    <link rel="shortcut icon" href="Asset/Jo.png"/>
+    <link rel="shortcut icon" href="asset/Jo.png"/>
   </head>
 
   <body style="background-color: #D5CEA3;" height="100%">
   <!-- Nav Section -->
     <nav class="navbar navbar-expand-lg navbar-dark text-light sticky-top shadow" style="background-color: #1A120B">
       <div class="container-fluid">
-        <img src="/asset/Jo.png" width="60px" />
-        <a class="navbar-brand" href="/">MY PORTOFOLIO</a>
+        <img src="asset/Jo.png" width="60px" />
+        <a class="navbar-brand" href="#">MY PORTOFOLIO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">HOME</a>
+              <a class="nav-link active" aria-current="page" href="#">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">ABOUT</a>
+              <a class="nav-link" href="about/index.html">ABOUT</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> EXPERIENCE </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/experience/pendidikan">RIWAYAT PENDIDIKAN</a></li>
-                <li><a class="dropdown-item" href="/experience/pekerjaan">RIWAYAT PEKERJAAN</a></li>
-                <li><a class="dropdown-item" href="/experience/organisasi">RIWAYAT ORGANISASI</a></li>
+                <li><a class="dropdown-item" href="experience/pendidikan/index.html">RIWAYAT PENDIDIKAN</a></li>
+                <li><a class="dropdown-item" href="experience/pekerjaan/index.html">RIWAYAT PEKERJAAN</a></li>
+                <li><a class="dropdown-item" href="experience/organisasi/index.html">RIWAYAT ORGANISASI</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/project">PROJECT</a>
+              <a class="nav-link" href="project/index.html">PROJECT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact">CONTACT</a>
+              <a class="nav-link" href="contact/index.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -55,13 +55,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/asset/pundi lahan.jpeg" class="d-block w-100" alt="plk1">
+              <img src="asset/pundi lahan.jpeg" class="d-block w-100" alt="plk1">
             </div>
             <div class="carousel-item">
-              <img src="/asset/pundi sterillizer.jpeg" class="d-block w-100" alt="plk2">
+              <img src="asset/pundi sterillizer.jpeg" class="d-block w-100" alt="plk2">
             </div>
             <div class="carousel-item">
-              <img src="/asset/pundi boiler.jpeg" class="d-block w-100" alt="plk3">
+              <img src="asset/pundi boiler.jpeg" class="d-block w-100" alt="plk3">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -79,11 +79,11 @@
     <section class="container-fluid" style="background-color: #D5CEA3;">
       <div class="row text-center align-items-center">
         <div class="col-12">
-          <img src="/asset/foto portofolio.jpg" alt="My Image" width="150px" height="150px" class="rounded-circle border border-4" />
+          <img src="asset/foto portofolio.jpg" alt="My Image" width="150px" height="150px" class="rounded-circle border border-4" />
           <h3 class="mt-2">✨WELCOME TO MY PORTOFOLIO✨</h3>
           <p>Hii everyone, welcome to my portofolio. <span style="color: rgb(0, 0, 0)">Enjoy!!!</span></p>
           <p style="color: rgb(0, 0, 0)">Fulltime Learner | Chemical Engineer | Content Creator</p>
-          <a href="/contact" class="btn btn-warning text-dark">Hubungi Saya</a>
+          <a href="contact/index.html" class="btn btn-warning text-dark">Hubungi Saya</a>
         </div>
       </div>
     </section>
@@ -100,13 +100,13 @@
       <a> Terms of Service </a>
       <a> Privacy of Policy </a>
       <a href="https://www.instagram.com/marchseliusjonathan.jpg/">
-        <img src="/asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
+        <img src="asset/logo instagram.png" alt="instagram" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.linkedin.com/in/marchseliusjonathan26/">
-        <img src="/asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
+        <img src="asset/logo linkedin.png" alt="linkedin" width="15rem" height="15 rem" />
       </a>
       <a href="https://www.youtube.com/channel/UCAS7iZYXD2rcISozKknrchQ">
-        <img src="/asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
+        <img src="asset/logo youtube.png" alt="linkedin" width="24rem" height="15 rem" />
       </a>
     </div>
   </footer>
